--- a/Seasonality Extractor.ipynb
+++ b/Seasonality Extractor.ipynb
@@ -663,7 +663,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "3.11.8",
    "language": "python",
    "name": "python3"
   },
@@ -677,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
