running volume fc on volume gsheet

--- a/Seasonality Extractor.ipynb
+++ b/Seasonality Extractor.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "id": "8261a05f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "fbd6bfb0",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "id": "d1cddf2f",
    "metadata": {
     "scrolled": true
@@ -86,7 +86,7 @@
      "output_type": "stream",
      "text": [
       "INFO: Verbose logging enabled (level=logging.INFO)\n",
-      "INFO: Script start time: 13/05/2025 11:36:20\n",
+      "INFO: Script start time: 13/05/2025 11:37:56\n",
       "INFO: Importing range: 'raw!A1:C' from G-sheet with id: '1PpFL2Wb3nbpk2rRK79XXeMPnqVNK8iE9r1zKkJ_WOOE'\n",
       "INFO:     G-Sheets API Credentials: token.json exists\n",
       "INFO: Importing range: 'holidays!A1:E' from G-sheet with id: '1DDMBg8-q5SuPpeL1ZqC8vs7D9U-_b_F0dIroFBsNvEk'\n",
@@ -101,8 +101,8 @@
       "INFO: get_intra_week_distro: window_size: 26\n",
       "INFO: get_intra_month_seasonality: window size: 24\n",
       "raw seasonality null check: 0\n",
-      "CPU times: user 487 ms, sys: 99.3 ms, total: 587 ms\n",
-      "Wall time: 2.43 s\n"
+      "CPU times: user 452 ms, sys: 104 ms, total: 557 ms\n",
+      "Wall time: 2.08 s\n"
      ]
     }
    ],
@@ -118,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "id": "f004ed56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc1c584c341e4711b66b3ff23dbb35e7",
+       "model_id": "489c3b22cf3049c394427201a15b772c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "id": "4df70959",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f04bdc89b36a4c7eb7ab10dcd040a755",
+       "model_id": "d67608590c394ee9bccc354962203bef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "id": "54513d7d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56495de6e2ac44ad91aa92f2c3c10f3b",
+       "model_id": "cab49754daae4b9a90cb717f6b0a041d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "id": "f9352536",
    "metadata": {
     "scrolled": true
@@ -303,9 +303,9 @@
       "INFO: {3104} cells updated.\n",
       "INFO:     G-Sheets API Credentials: token.json exists\n",
       "INFO:     G-Sheets API Credentials: token.json exists\n",
+      "INFO:     User credentials expired, refreshing\n",
       "INFO: {880} cells updated.\n",
       "INFO:     G-Sheets API Credentials: token.json exists\n",
-      "INFO: couldn't create new sheet with name 'clean_raw_vol', it may already exist.\n",
       "INFO:     G-Sheets API Credentials: token.json exists\n",
       "INFO: {359457} cells updated.\n"
      ]
