--- a/Volume Forecaster.ipynb
+++ b/Volume Forecaster.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 73,
    "id": "01e21c52",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "id": "c0be064e",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
     "\n",
     "    \n",
     "    # Forecast Input Parameters:\n",
-    "    sheet_id                      = '1G9YAYeCdTBlRztR9AqOgmsf-IbSawEbO4nmFSun6jBM',\n",
+    "    sheet_id                      = '1LpoC__3KuZ82kx73lMpCVMzFPCAOiMINg_xg0Qy3ldE',\n",
     "    mau_fc_range                  = 'mau_fc!A1:I',\n",
     "    intra_week_seasonality_range  = 'intra_week_seasonality!A1:D',\n",
     "    intra_month_seasonality_range = 'intra_month_seasonality!A1:C',\n",
@@ -63,8 +63,7 @@
     "    forecast_offsets_range        = 'offsets!A1:D',\n",
     "    holiday_impacts_range         = 'holidays!A1:F',\n",
     "    forecast_upper_bound          = 1.075,\n",
-    "    forecast_lower_bound          = 0.925\n",
-    ")"
+    "    forecast_lower_bound          = 0.925)"
    ]
   },
   {
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "id": "9d9a7263",
    "metadata": {},
    "outputs": [],
@@ -117,7 +116,7 @@
     "        logging.warning(warning_string)\n",
     "        logging.warning('These weeks will not have a forecast correctly calculated!!!')\n",
     "\n",
-    "    # Import weekly base volume & intra-week + intra-month seasonality\n",
+    "    # Import weekly base volume & intra-week_month_seasonality + intra-month_seasonality\n",
     "    df_base_vol = fc.import_gsheet_to_df(parameters['sheet_id'], parameters['business_line_list_range'])\n",
     "    df_intra_week_seasonality = fc.import_gsheet_to_df(parameters['sheet_id'], parameters['intra_week_seasonality_range'])\n",
     "    df_intra_month_seasonality = fc.import_gsheet_to_df(parameters['sheet_id'], parameters['intra_month_seasonality_range'])\n",
@@ -130,6 +129,7 @@
     "\n",
     "    # Cross merge df (containing our list of forecast dates) with base_vol to get cartesean product of all dates & business lines\n",
     "    df = df.merge(df_base_vol, how='cross')\n",
+    "    \n",
     "    # Join MAU fc, intra-week & intra-month seasonality to get mega df with everything we need to calculate the final baseline volume forecast\n",
     "    df = df.merge(df_mau_fc, how='left', left_on=['language/market/iban', 'iso_calendar_week'], right_on=['Language/Market/Iban', 'Calendar Week'])\n",
     "    df = df.merge(df_intra_week_seasonality, how='left', left_on=['business_line_alias', 'day_of_week'], right_on=['business_line_alias', 'dow'])\n",
@@ -144,7 +144,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
+   "id": "d951bdc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['forecast_start_date', 'forecast_start_date_2', 'forecast_end_date', 'sheet_id', 'mau_fc_range', 'intra_week_seasonality_range', 'intra_month_seasonality_range', 'business_line_list_range', 'forecast_offsets_range', 'holiday_impacts_range', 'forecast_upper_bound', 'forecast_lower_bound'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(parameters.keys())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "8ff437b4",
    "metadata": {
     "scrolled": true
@@ -154,13 +172,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Importing range: 'mau_fc!A1:I' from G-sheet with id: '1G9YAYeCdTBlRztR9AqOgmsf-IbSawEbO4nmFSun6jBM'\n",
+      "INFO: Importing range: 'mau_fc!A1:I' from G-sheet with id: '1LpoC__3KuZ82kx73lMpCVMzFPCAOiMINg_xg0Qy3ldE'\n",
       "INFO:     G-Sheets API Credentials: token.json exists\n",
-      "INFO: Importing range: 'weekly_base_vol!A1:D' from G-sheet with id: '1G9YAYeCdTBlRztR9AqOgmsf-IbSawEbO4nmFSun6jBM'\n",
+      "INFO: Importing range: 'weekly_base_vol!A1:D' from G-sheet with id: '1LpoC__3KuZ82kx73lMpCVMzFPCAOiMINg_xg0Qy3ldE'\n",
       "INFO:     G-Sheets API Credentials: token.json exists\n",
-      "INFO: Importing range: 'intra_week_seasonality!A1:D' from G-sheet with id: '1G9YAYeCdTBlRztR9AqOgmsf-IbSawEbO4nmFSun6jBM'\n",
+      "INFO: Importing range: 'intra_week_seasonality!A1:D' from G-sheet with id: '1LpoC__3KuZ82kx73lMpCVMzFPCAOiMINg_xg0Qy3ldE'\n",
       "INFO:     G-Sheets API Credentials: token.json exists\n",
-      "INFO: Importing range: 'intra_month_seasonality!A1:C' from G-sheet with id: '1G9YAYeCdTBlRztR9AqOgmsf-IbSawEbO4nmFSun6jBM'\n",
+      "INFO: Importing range: 'intra_month_seasonality!A1:C' from G-sheet with id: '1LpoC__3KuZ82kx73lMpCVMzFPCAOiMINg_xg0Qy3ldE'\n",
       "INFO:     G-Sheets API Credentials: token.json exists\n"
      ]
     }
@@ -180,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 78,
    "id": "b995181c",
    "metadata": {},
    "outputs": [],
@@ -243,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 79,
    "id": "567e6cca",
    "metadata": {},
    "outputs": [
@@ -251,9 +269,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Importing range: 'offsets!A1:D' from G-sheet with id: '1G9YAYeCdTBlRztR9AqOgmsf-IbSawEbO4nmFSun6jBM'\n",
+      "INFO: Importing range: 'offsets!A1:D' from G-sheet with id: '1LpoC__3KuZ82kx73lMpCVMzFPCAOiMINg_xg0Qy3ldE'\n",
       "INFO:     G-Sheets API Credentials: token.json exists\n",
-      "INFO: Importing range: 'holidays!A1:F' from G-sheet with id: '1G9YAYeCdTBlRztR9AqOgmsf-IbSawEbO4nmFSun6jBM'\n",
+      "INFO: Importing range: 'holidays!A1:F' from G-sheet with id: '1LpoC__3KuZ82kx73lMpCVMzFPCAOiMINg_xg0Qy3ldE'\n",
       "INFO:     G-Sheets API Credentials: token.json exists\n"
      ]
     }
@@ -313,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 80,
    "id": "98a177dd",
    "metadata": {
     "scrolled": true
@@ -348,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 81,
    "id": "a5e55d18",
    "metadata": {},
    "outputs": [
@@ -402,22 +420,22 @@
        "      <td>2024-10-28 00:00:00</td>\n",
        "      <td>de</td>\n",
        "      <td>inbound phone</td>\n",
-       "      <td>306.289298</td>\n",
-       "      <td>329.260996</td>\n",
-       "      <td>283.317601</td>\n",
+       "      <td>260.275248</td>\n",
+       "      <td>279.795892</td>\n",
+       "      <td>240.754605</td>\n",
        "      <td>2024-w44</td>\n",
        "      <td>2024-10</td>\n",
        "      <td>1</td>\n",
        "      <td>28</td>\n",
        "      <td>...</td>\n",
        "      <td>788609</td>\n",
-       "      <td>0.197922</td>\n",
-       "      <td>0.060683</td>\n",
-       "      <td>295.492437</td>\n",
+       "      <td>0.19231</td>\n",
+       "      <td>0.032243</td>\n",
+       "      <td>249.478387</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1400.0</td>\n",
+       "      <td>1250.0</td>\n",
        "      <td>0.0054</td>\n",
        "      <td>10.796862</td>\n",
        "    </tr>\n",
@@ -426,22 +444,22 @@
        "      <td>2024-10-29 00:00:00</td>\n",
        "      <td>de</td>\n",
        "      <td>inbound phone</td>\n",
-       "      <td>282.758296</td>\n",
-       "      <td>303.965168</td>\n",
-       "      <td>261.551424</td>\n",
+       "      <td>254.543205</td>\n",
+       "      <td>273.633945</td>\n",
+       "      <td>235.452465</td>\n",
        "      <td>2024-w44</td>\n",
        "      <td>2024-10</td>\n",
        "      <td>2</td>\n",
        "      <td>29</td>\n",
        "      <td>...</td>\n",
        "      <td>788609</td>\n",
-       "      <td>0.180117</td>\n",
-       "      <td>0.075677</td>\n",
-       "      <td>272.711581</td>\n",
+       "      <td>0.18601</td>\n",
+       "      <td>0.045893</td>\n",
+       "      <td>244.496490</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1400.0</td>\n",
+       "      <td>1250.0</td>\n",
        "      <td>0.0054</td>\n",
        "      <td>10.046715</td>\n",
        "    </tr>\n",
@@ -450,22 +468,22 @@
        "      <td>2024-10-30 00:00:00</td>\n",
        "      <td>de</td>\n",
        "      <td>inbound phone</td>\n",
-       "      <td>278.175484</td>\n",
-       "      <td>299.038646</td>\n",
-       "      <td>257.312323</td>\n",
+       "      <td>248.635285</td>\n",
+       "      <td>267.282931</td>\n",
+       "      <td>229.987638</td>\n",
        "      <td>2024-w44</td>\n",
        "      <td>2024-10</td>\n",
        "      <td>3</td>\n",
        "      <td>30</td>\n",
        "      <td>...</td>\n",
        "      <td>788609</td>\n",
-       "      <td>0.176318</td>\n",
-       "      <td>0.091164</td>\n",
-       "      <td>270.802724</td>\n",
+       "      <td>0.18078</td>\n",
+       "      <td>0.060604</td>\n",
+       "      <td>240.964139</td>\n",
        "      <td>Reformation Day -1d</td>\n",
        "      <td>-0.0100</td>\n",
-       "      <td>-2.809853</td>\n",
-       "      <td>1400.0</td>\n",
+       "      <td>-2.511468</td>\n",
+       "      <td>1250.0</td>\n",
        "      <td>0.0054</td>\n",
        "      <td>10.182613</td>\n",
        "    </tr>\n",
@@ -474,22 +492,22 @@
        "      <td>2024-10-31 00:00:00</td>\n",
        "      <td>de</td>\n",
        "      <td>inbound phone</td>\n",
-       "      <td>263.814049</td>\n",
-       "      <td>283.600103</td>\n",
-       "      <td>244.027995</td>\n",
+       "      <td>233.077271</td>\n",
+       "      <td>250.558067</td>\n",
+       "      <td>215.596476</td>\n",
        "      <td>2024-w44</td>\n",
        "      <td>2024-10</td>\n",
        "      <td>4</td>\n",
        "      <td>31</td>\n",
        "      <td>...</td>\n",
        "      <td>788609</td>\n",
-       "      <td>0.170043</td>\n",
-       "      <td>0.107076</td>\n",
-       "      <td>264.973853</td>\n",
+       "      <td>0.17223</td>\n",
+       "      <td>0.076367</td>\n",
+       "      <td>232.979705</td>\n",
        "      <td>Reformation Day</td>\n",
        "      <td>-0.0393</td>\n",
-       "      <td>-10.792018</td>\n",
-       "      <td>1400.0</td>\n",
+       "      <td>-9.534648</td>\n",
+       "      <td>1250.0</td>\n",
        "      <td>0.0054</td>\n",
        "      <td>9.632215</td>\n",
        "    </tr>\n",
@@ -498,22 +516,22 @@
        "      <td>2024-11-01 00:00:00</td>\n",
        "      <td>de</td>\n",
        "      <td>inbound phone</td>\n",
-       "      <td>240.593425</td>\n",
-       "      <td>258.637932</td>\n",
-       "      <td>222.548918</td>\n",
+       "      <td>217.872481</td>\n",
+       "      <td>234.212917</td>\n",
+       "      <td>201.532045</td>\n",
        "      <td>2024-w44</td>\n",
        "      <td>2024-11</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>788609</td>\n",
-       "      <td>0.163087</td>\n",
-       "      <td>0.094545</td>\n",
-       "      <td>251.258275</td>\n",
+       "      <td>0.16526</td>\n",
+       "      <td>0.091120</td>\n",
+       "      <td>226.615169</td>\n",
        "      <td>All Saints Day</td>\n",
        "      <td>-0.0780</td>\n",
-       "      <td>-20.353891</td>\n",
-       "      <td>1400.0</td>\n",
+       "      <td>-18.431728</td>\n",
+       "      <td>1250.0</td>\n",
        "      <td>0.0054</td>\n",
        "      <td>9.689041</td>\n",
        "    </tr>\n",
@@ -531,39 +549,39 @@
        "4  2024-11-01 00:00:00                   de  inbound phone   \n",
        "\n",
        "   final_vol_forecast  final_vol_forecast_upper_bound  \\\n",
-       "0          306.289298                      329.260996   \n",
-       "1          282.758296                      303.965168   \n",
-       "2          278.175484                      299.038646   \n",
-       "3          263.814049                      283.600103   \n",
-       "4          240.593425                      258.637932   \n",
+       "0          260.275248                      279.795892   \n",
+       "1          254.543205                      273.633945   \n",
+       "2          248.635285                      267.282931   \n",
+       "3          233.077271                      250.558067   \n",
+       "4          217.872481                      234.212917   \n",
        "\n",
        "   final_vol_forecast_lower_bound iso_calendar_week calendar_month  \\\n",
-       "0                      283.317601          2024-w44        2024-10   \n",
-       "1                      261.551424          2024-w44        2024-10   \n",
-       "2                      257.312323          2024-w44        2024-10   \n",
-       "3                      244.027995          2024-w44        2024-10   \n",
-       "4                      222.548918          2024-w44        2024-11   \n",
+       "0                      240.754605          2024-w44        2024-10   \n",
+       "1                      235.452465          2024-w44        2024-10   \n",
+       "2                      229.987638          2024-w44        2024-10   \n",
+       "3                      215.596476          2024-w44        2024-10   \n",
+       "4                      201.532045          2024-w44        2024-11   \n",
        "\n",
        "   day_of_week  day_of_month  ... mau_forecast intra_week_distro  \\\n",
-       "0            1            28  ...       788609          0.197922   \n",
-       "1            2            29  ...       788609          0.180117   \n",
-       "2            3            30  ...       788609          0.176318   \n",
-       "3            4            31  ...       788609          0.170043   \n",
-       "4            5             1  ...       788609          0.163087   \n",
+       "0            1            28  ...       788609           0.19231   \n",
+       "1            2            29  ...       788609           0.18601   \n",
+       "2            3            30  ...       788609           0.18078   \n",
+       "3            4            31  ...       788609           0.17223   \n",
+       "4            5             1  ...       788609           0.16526   \n",
        "\n",
        "   intra_month_seasonality  baseline_vol_forecast         holiday_name  \\\n",
-       "0                 0.060683             295.492437                  NaN   \n",
-       "1                 0.075677             272.711581                  NaN   \n",
-       "2                 0.091164             270.802724  Reformation Day -1d   \n",
-       "3                 0.107076             264.973853      Reformation Day   \n",
-       "4                 0.094545             251.258275       All Saints Day   \n",
+       "0                 0.032243             249.478387                  NaN   \n",
+       "1                 0.045893             244.496490                  NaN   \n",
+       "2                 0.060604             240.964139  Reformation Day -1d   \n",
+       "3                 0.076367             232.979705      Reformation Day   \n",
+       "4                 0.091120             226.615169       All Saints Day   \n",
        "\n",
        "  holiday_offset_%  holiday_vol_offset  weekly_base_vol  cumulative_%growth  \\\n",
-       "0           0.0000            0.000000           1400.0              0.0054   \n",
-       "1           0.0000            0.000000           1400.0              0.0054   \n",
-       "2          -0.0100           -2.809853           1400.0              0.0054   \n",
-       "3          -0.0393          -10.792018           1400.0              0.0054   \n",
-       "4          -0.0780          -20.353891           1400.0              0.0054   \n",
+       "0           0.0000            0.000000           1250.0              0.0054   \n",
+       "1           0.0000            0.000000           1250.0              0.0054   \n",
+       "2          -0.0100           -2.511468           1250.0              0.0054   \n",
+       "3          -0.0393           -9.534648           1250.0              0.0054   \n",
+       "4          -0.0780          -18.431728           1250.0              0.0054   \n",
        "\n",
        "   Growth_cap_lift  \n",
        "0        10.796862  \n",
@@ -575,7 +593,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
